--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,5 +41,5 @@ jobs:
         with:
           app_owner_name: hungpv19
           api_token: 191bec14-af7b-4144-b60e-4a4ea7e93825
-          app_file_path: android/app/build/outputs/apk/release/app-release.apk
+          app_file_path: ./android/app/build/outputs/apk/release/app-release.apk
 
