--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,12 @@ jobs:
       - name: Install npm dependencies
         run: |
           npm install
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "10.x"
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: "2.x"
       - name: Install Fastlane
         run:  gem install fastlane
       - name: Build Apk
