--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: 'React Native Android Build APK'
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  merge:
+  pull_request:
     branches: [master]
 
 jobs:
