--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: 'React Native Android Build APK'
+name: 'Keihiseisan Buid App'
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
@@ -18,9 +18,18 @@ jobs:
       - name: Run tests
         run: |
           npm test
-  # Second Job
-  build-android:
+  # Eslint job
+  eslint:
     needs: install-and-test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Check eslint
+        run: |
+          npm run lint
+  # Android Job
+  build-android:
+    needs: eslint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
